--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm Jane Doe
+# Hi, I'm Shaheen shaik
 
-I'm creating noice web experiences for the next generation of consumer-facing companies
+I'm an enthusiatic civil engineer and gate aspirant. experienced in Project Management and Risk Assessment. 
